fixed footer alignment

--- a/css/mybaddogs.css
+++ b/css/mybaddogs.css
@@ -151,7 +151,7 @@ textarea {
 
 footer {
     clear: both;
-    position: relative;
+    //position: relative;
     bottom: 0;
     left:0;
     height: auto;
@@ -161,12 +161,11 @@ footer {
     margin: 50px 0 0 0;
     padding: 0;
     display: inline-block;
-
 }
 
 footer a:first-of-type {
 	float: left;
-    width: 30%;
+    width: 33%;
     padding: 0.2em 0.2em 0em 0.2em;
 }
 
@@ -176,15 +175,17 @@ footer a img {
 
 footer p:first-of-type {
     float: left;
-    width: 30%;
-    text-align: right;
-    margin: 0 auto;
-    padding-top: 2.5em;
+    width: 33%;
+    text-align: center;
+    //margin: 0 auto;
+    padding-top: 1.5em;
 }
 
 footer ul {
-    float:right;
-    margin-right: 10px;
+    float: right;
+    margin: 0 10px 0 0;
+    padding-top: 10px;
+    list-style-type: none;
 }
 
 footer ul li {
